change flaskext to flask.ext; modify imported packages to support wtforms 2.0; fix some templates bugs; change flask Module to Blueprint.

--- a/pypress/templates/blog/people.html
+++ b/pypress/templates/blog/people.html
@@ -67,7 +67,7 @@
 {%- endblock %}
 {%- block js %}
 {{ super() }}
-<script type="text/javascript" src="{{ url_for('.static', filename="js/jquery.idTabs.min.js") }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename="js/jquery.idTabs.min.js") }}"></script>
 <script type="text/javascript">
 $(function(){
     $("#tab").idTabs();
