--- a/pypress/themes/default/templates/layout.html
+++ b/pypress/themes/default/templates/layout.html
@@ -13,7 +13,7 @@
     {%- endblock %}
     {%- block js %}
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ url_for('.static', filename='js/public.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/public.js') }}" type="text/javascript"></script>
     <script type="text/javascript">
     $(function(){
         $("#go-to-top").click(function(){
